--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Reward System</title>
+    <title>RF Code Reward System</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Code Reward System</h1>
+        <h1>Code Reward System BY PABLO</h1>
         <button id="generateBtn">Generate Code</button>
         <p id="linkDisplay" style="display: none;"></p>
         <div id="codeInputContainer" style="display: none;">
